--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ĐỒ ÁN PHẦM MỀM</title>
+    <title>SHOP_HOA_HUFLIT</title>
   </head>
   <body>
     <header>
-      <h1>TÊN TRANG WEB</h1>
+      <h1>HUFLIT</h1>
       <nav>
         <!-- MENU -->
         <ul>
@@ -23,20 +23,19 @@
     <main>
       <section class="product">
         <h2>Sản phẩm 1</h2>
-        <p>Mô tả sản phẩm 1.</p>
+        <p>Mô tả sản phẩm 1</p>
         <p>Giá: 120.000VNĐ</p>
         <button>Thêm vào giỏ hàng</button>
       </section>
-
       <section class="product">
         <h2>Sản phẩm 2</h2>
-        <p>Mô tả sản phẩm 2.</p>
+        <p>Mô tả sản phẩm 2</p>
         <p>Giá: 120.000VNĐ</p>
         <button>Thêm vào giỏ hàng</button>
       </section>
     </main>
     <footer>
-      <p>&copy; Đồ án phần mềm_2023_HUFLIT</p>
+      <p>&copy; SHOP_HOA_HUFLIT</p>
     </footer>
   </body>
 </html>
